--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,10 @@ spring.datasource.hikari.jdbc-url=jdbc:mariadb://localhost:3306/board?serverTime
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=1234
 
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
+# create : SessionFactory? ??? ? ???? ??? ?? ??. (sql?? ??? ???? ???? ?? ???? ??????.)
+# create-drop : create? ?????, SessionFactory? ???? ?? ???? drop???.
+# update : SessionFactory? ??? ? Object? ???? ???? alter ???. ???? ???.
+# validate : update?? Object? ?????, ???? ???? ???? ??, Object? ???? ??? ???? ??? ?????.
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
 spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
