--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+//resources/application.properties
 spring.datasource.hikari.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.hikari.jdbc-url=jdbc:mariadb://localhost:3306/board?serverTimezone=Asia/Seoul&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.hikari.username=root
@@ -5,5 +6,9 @@ spring.datasource.hikari.password=1234
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
 
 spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
