--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,5 +10,6 @@ spring.jpa.show-sql=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
+logging.level.org.springframework = DEBUG
 
 spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
