--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,4 +8,6 @@ spring.jpa.show-sql=true
 
 spring.mustache.servlet.expose-request-attributes=true
 
+server.servlet.session.timeout=60
+
 logging.level.org.springframework = DEBUG
